# DS5_Bridge

./: .gitignore  CMakeLists.txt  CMakePresets.json  DS5-Bridge-Flash-Nuke.uf2  NOTICE  README.md
.github/: FUNDING.yml
.github/workflows/: build.yml  companion.yml  release.yml
cmake/: relocate_to_ram.cmake  verify_core1_sram.cmake
companion/: .npmrc  package-lock.json  package.json
companion/native/AudioHelper/: AudioHelper.csproj  AudioSessionCatalog.cs  AudioSessionMonitor.cs  (+11 more)
companion/native/AudioHelper.Tests/: AudioHelper.Tests.csproj  EndpointManagerTests.cs  LegacyFramePacketizerTests.cs  ProcessIconDataUrlResolverTests.cs
companion/scripts/: electron-builder-after-pack.cjs  layout-check.mjs  package-win.mjs  visual-smoke.mjs
companion/src/: preload.ts
docs/: cachyos-install.md  development.md  devices-tab-port-plan.md  diagnostics.md  ds5dongle-clone-audio-ram-implementation.md  linux-port.md  upstream-backport-notes.md  windows-device-cleanup.md
docs/images/: README-SHOT-LIST.md
packaging/linux/: 52-ds5-bridge-noucm.conf  60-ds5bridge.rules  install-udev-rules.sh  pacman-after-install.sh  pacman-after-remove.sh
src/: audio.cpp  audio.h  bt.cpp  bt.h  btstack_config.h  button_functions.cpp  button_functions.h  classic_rumble_delivery_policy.h  companion.cpp  companion.h  controller_output_policy.cpp  controller_output_policy.h  controller_output_rumble_state.cpp  controller_output_state.cpp  controller_output_state.h  controller_output_submit.h  controller_packet_compositor.cpp  controller_packet_compositor.h  controller_report.h  controller_state.h  debug_config.h  dualsense_input_decoder.cpp  dualsense_input_decoder.h  dualsense_output.h  firmware_log.cpp  firmware_log.h  haptics_test_signal.cpp  haptics_test_signal.h  host_audio_runtime.h  host_bridge.cpp  host_bridge.h  host_pcm_iso.cpp  host_pcm_iso.h  kitsune_button_gesture.cpp  kitsune_button_gesture.h  main.cpp  output_scheduler.cpp  output_scheduler.h  ram_mem.c  tusb_config.h  (+8 more)
src/persona/: ds4_persona.cpp  dualsense_persona.cpp  dualsense_persona.h  host_persona.cpp  host_persona.h  xusb360_persona.cpp  xusb360_persona.h  xusb360_usb.cpp  xusb360_usb.h
tests/firmware/: CMakeLists.txt  diagnostics_config_test.cpp  firmware_logic_tests.cpp  usb_descriptor_migration_test.cpp
tools/: build-pico-universal-flash-nuke.sh  create-release-candidate.ps1  persona-test.ps1  trigger-hold.py  trigger-probe.py
tools/persona-test/: DS5Bridge.PersonaTester.csproj  Program.cs  README.md
tools/windows/: clean-ds5bridge-devices.ps1  pico-uart-logger.ps1
(+67 files in other folders)
